--- a/salarios.html
+++ b/salarios.html
@@ -3,15 +3,27 @@
 <head>
     <title>Salários na área de TI</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/estilo.css"
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Girassol&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="img/favicontuli.png">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1 class="titulos">Salários</h1>
-        </nav>
+    <header class="fixo">
+		<h1><img src="img/TULIS.png"></h1>
+            <nav class="menu-opcoes">
+                <ul class="ajustes">
+                    <li><a href="index.html">inicio</a></li>
+                    <li><a href="index.html#sobre">sobre</a></li>
+                    <li><a href="index.html#conhecer mais">conhecer mais</a></li>
+                    <li><a href="salarios.html">salarios</a></li>
+                    <li><a href="index.html#galeria">galeria</a></li>
+                    <li><a href="contato.html">contato</a></li>
 
-    </header>
+                </ul>
+            </nav>
+
+	</header>
     <div class="container">
         <div>
             <h1 class="titulos">Saiba mais sobre as carreiras dentro do TI e seus salários.</h1>
